--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 <body>
     
 <div class="container">
-    <img src="images/image-qr-code.png" alt="frontend mentor qr code">
+    <img src="image-qr-code.png" alt="frontend mentor qr code">
   
     <h3>Improve your front-end skills by building projects</h3>
 
